fixtures/errors/proxy_construct_non_constructor_target.js
const ProxyObject = new Proxy({}, {});

new ProxyObject();
